Game with obstacles moving

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   </head>
   <body>
     <div class="game-intro">
-      <img src="/images/logo.jpeg" alt="" id="logo-img" />                        <!--Change image-->
+      <img src="/images/logo.jpeg" alt="" id="logo-img" />                       
       <br />
       <button id="start-button">StartGame</button>
-      <button id="restart-button">Restart Game</button>
       <div id="arrows-img-div">
         <h4>Go up and down to make sure DJ Duck-a-lot doesn't get hit by something bad! And that he catches only the good stuff.</h4>
         <img src="/images/arrows.png" alt="arrows" id="arrows-img" />
@@ -27,8 +26,9 @@
         <div id="score-div">
           <h1>Score: <span id="score">0</span></h1>
         </div>
+        <button id="restart-button">Restart Game</button>
       </div>
-      <canvas id="my-canvas" width="1000" height="800"></canvas>
+      <canvas id="my-canvas" width="1100" height="600"></canvas>
     </div>
 
     <script type="text/javascript" src="/src/js/main.js"></script>
