New css path again

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!--Favicon-->
     <link rel="icon" href="images/dj.jpeg" />
-    <link rel="stylesheet" href="/src/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <title>DJ Duck-a-lot</title>
   </head>
   <body>
