--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!--Favicon-->
     <link rel="icon" href="images/dj.jpeg" />
-    <link rel="stylesheet" href="src/styles/style.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <title>DJ Duck-a-lot</title>
   </head>
   <body>
     <div class="game-intro">
-      <img src="images/logo.jpeg" alt="" id="logo-img" />                       
+      <img src="./images/logo.jpeg" alt="" id="logo-img" />                       
       <br />
       <button id="start-button">StartGame</button>
       <div id="arrows-img-div">
         <h4>Go up and down to make sure DJ Duck-a-lot doesn't get hit by something bad! And that he catches only the good stuff.</h4>
-        <img src="images/arrows.png" alt="arrows" id="arrows-img" />
+        <img src="./images/arrows.png" alt="arrows" id="arrows-img" />
       </div>
     </div>
 
     <div id="game-board">
       <div id="left-game-div">
-        <img id="game-logo" src="images/logo.jpeg" alt="" />
+        <img id="game-logo" src="./images/logo.jpeg" alt="" />
         <div id="score-div">
           <h1>Score: <span id="score">0</span></h1>
         </div>
@@ -31,6 +31,6 @@
       <canvas id="my-canvas" width="1100" height="600"></canvas>
     </div>
 
-    <script type="text/javascript" src="src/js/main.js"></script>
+    <script type="text/javascript" src="./src/js/main.js"></script>
   </body>
 </html>
