Game in good shape

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
       <br />
       <button id="start-button">StartGame</button>
       <div id="arrows-img-div">
-        <h4>Go up and down to make sure DJ Duck-a-lot doesn't get hit by something bad! And that he catches only the good stuff.</h4>
+        <h4>Move around to make sure DJ Duck-a-lot doesn't get hit by something! And don't be shocked when the pace gets faster</h4>
         <img src="./images/arrows.png" alt="arrows" id="arrows-img" />
       </div>
     </div>
 
     <div id="game-board">
       <div id="left-game-div">
+        <h3>Move around to make sure DJ Duck-a-lot doesn't get hit by something! And don't be shocked when the pace gets faster</h3>
         <img id="game-logo" src="./images/logo.jpeg" alt="" />
         <div id="score-div">
           <h1>Score: <span id="score">0</span></h1>
