--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!--Favicon-->
-    <link rel="icon" href="images/dj.jpeg" />
+    <link rel="icon" href="images/dj_player.png" />
     <link rel="stylesheet" href="./src/styles/style.css" />
     <title>DJ Duck-a-lot</title>
   </head>
   <body>
-    <div class="game-intro">
+    <div class="game-splash">
       <img src="./images/logo.jpeg" alt="" id="logo-img" />                       
       <br />
-      <button id="start-button">StartGame</button>
+      <button id="start-button">Start the Game</button>
+      <h4 id="text-intro">Move in all directions to make sure </br>DJ Duck-a-lot doesn't get hit by something dangerous! But roses and CDs give him an extra boost. </br>And don't be shocked when the pace picks up!</h4>
+      <h4 id="text-game-over">Oh no! Game over. </br> Do you wanna play again?</h4>
+      <button id="restart-button">Restart Game</button>
       <div id="arrows-img-div">
-        <h4>Move around to make sure DJ Duck-a-lot doesn't get hit by something! And don't be shocked when the pace gets faster</h4>
         <img src="./images/arrows.png" alt="arrows" id="arrows-img" />
       </div>
     </div>
 
     <div id="game-board">
-      <div id="left-game-div">
-        <h3>Move around to make sure DJ Duck-a-lot doesn't get hit by something! And don't be shocked when the pace gets faster</h3>
+      <div id="game-div">
+        <h4 id="luck">Good luck!</h4>
         <img id="game-logo" src="./images/logo.jpeg" alt="" />
         <div id="score-div">
           <h1>Score: <span id="score">0</span></h1>
         </div>
-        <button id="restart-button">Restart Game</button>
       </div>
       <canvas id="my-canvas" width="1000" height="600"></canvas>
     </div>
