made it more retro

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!--Favicon-->
     <link rel="icon" href="images/dj_player.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/style.css" />
     <title>DJ Duck-a-lot</title>
   </head>
@@ -13,13 +16,14 @@
     <div class="game-splash">
       <img src="./images/logo.jpeg" alt="" id="logo-img" />                       
       <br />
-      <button id="start-button">Start the Game</button>
       <h4 id="text-intro">Move in all directions to make sure </br>DJ Duck-a-lot doesn't get hit by something dangerous! But roses and CDs give him an extra boost. </br>And don't be shocked when the pace picks up!</h4>
-      <h4 id="text-game-over">Oh no! Game over. </br> Do you wanna play again?</h4>
-      <button id="restart-button">Restart Game</button>
       <div id="arrows-img-div">
         <img src="./images/arrows.png" alt="arrows" id="arrows-img" />
       </div>
+      <button id="start-button">Start the Game</button>
+      <h4 id="text-game-over">Oh no! Game over. </br> Do you wanna play again?</h4>
+      <button id="restart-button">Restart Game</button>
+      
     </div>
 
     <div id="game-board">
